--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
             <div class="services-box">
                 <i class='bx bx-paint bx-flashing' ></i> 
-                <h3> graphic Designer</h3>
+                <h3> Graphic Designer</h3>
                 <p>Graphic designers use their knowledge of design, color, and typography to visually communicate a message or present a product. They create visual concepts, by hand or using computer software, to communicate ideas that inspire, inform, and captivate consumers.</p>
                 <a href="#" class="btn">Read More</a>
     
